--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');
 
 body {
     background-color: #1B1464;
     color: #ED1E79;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: 'Roboto', Arial, Helvetica, sans-serif;
     padding: 0;
     margin: 0;
     align-items: center;
@@ -83,4 +83,8 @@ a {
 
 a:hover {
     text-decoration: underline;
+}
+
+h1 {
+    font-size: 2.5em;
 }
