--- a/style.css
+++ b/style.css
@@ -88,3 +88,13 @@ a:hover {
 h1 {
     font-size: 2.5em;
 }
+
+h2 {
+    font-size: 1.3em;
+    font-weight: 400;
+}
+
+p {
+    font-size: 1.1em;
+}
+    
